--- a/style.css
+++ b/style.css
@@ -140,4 +140,7 @@
     font-size: 16px;
     padding-left: 5px;
     text-align: justify;
+    margin-bottom: 10px;
+    font-style: italic;
+    margin-right: 10px;
 }
