--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family: 'Roboto', sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
 
 .resume-contents {
@@ -17,13 +17,13 @@
 .left-section {
     grid-column: span 2;
     height: 100%;
-    background-color: #47086D;
+    background-color: rgb(9, 20, 83);
 }
 
 .right-section {
     grid-column: span 5;
     height: 100%;
-    background-color: #683A84;
+    background-color: #b1b6ff;
     border-radius: 0px 60px 0px 0px;
 }
 
@@ -43,7 +43,7 @@
 }
 
 .name {
-    color: #D6DBDF;
+    color: #e0c33e;
     font-size: 30px;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -94,8 +94,9 @@
 }
 
 .right-title {
-    color: #e0c33e;
+    color: rgb(9, 20, 83);
     font-size: 30px;
+    font-weight: bold;
 }
 
 .gap {
@@ -103,7 +104,8 @@
 }
 .about-me-contents {
     font-size: 18px;
-    color: #eeeeee;
+    color: #140375;
+    text-align: justify;
 }
 
 .experience-contents,
@@ -112,7 +114,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding-bottom: 2rem;
-    color: #F1F8FD;
+    color: #140375;
 }
 
 .exp-company-name,
