--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+    font-family: 'Roboto', sans-serif;
 }
 
 .resume-contents {
@@ -43,15 +43,15 @@
 }
 
 .name {
-    color: #e0c33e;
-    font-size: 30px;
+    color: #ffffff;
+    font-size: 27px;
     letter-spacing: 2px;
     text-transform: uppercase;
     font-weight: bold;
 }
 
 .profession {
-    color: #eeeeee;
+    color: #e0c33e;
     font-size: 20px;
     text-transform: uppercase;
     text-align: center;
